--- a/index.html
+++ b/index.html
@@ -537,14 +537,13 @@ w/ ana caseiro, ellen rose kelly, felix heuser, johannes wieners, harald hierony
 (video upon request)</div>
                     <div>
                         <div class="image-gallery with-sticky-text">
-                            <div class="image-placeholder">Production Photo 1</div>
-                            <div class="image-placeholder">Production Photo 2</div>
-                            <div class="image-placeholder">Production Photo 3</div>
-                            <div class="image-placeholder">Production Photo 4</div>
-                            <div class="image-placeholder">Production Photo 5</div>
-                            <div class="image-placeholder">Production Photo 6</div>
-                            <div class="image-placeholder">Production Photo 7</div>
-                            <div class="mobile-text-card">
+                            <img class="content-image" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_005.jpg" alt="Geschichte production photo 1">
+                            <img class="content-image" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_029.jpg" alt="Geschichte production photo 2">
+                            <img class="content-image" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_034.jpg" alt="Geschichte production photo 3">
+                            <img class="content-image" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_023.jpg" alt="Geschichte production photo 4">
+                            <img class="content-image" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_025.jpg" alt="Geschichte production photo 5">
+                            <img class="content-image" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_012.jpg" alt="Geschichte production photo 6">
+                            <img class="content-image" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_027.jpg" alt="Geschichte production photo 7">
                                 <div class="mobile-text-content right-align">geschichte
 operetta a capella by oscar strasnoy, based on fragments from witold gombrowicz (2003)
 oper graz
@@ -579,11 +578,11 @@ dramaturgy: isabelle becker
 w/ hila baggio, cathrin lange, solgerd isalv, ingrid katzengruber, andres agudelo, matthew vickers, aluda todua, julian orlishausen, michael pegher, marco mondragón, david pichlmaier, jared ice, opernchor des staatstheaters darmstadt, statisterie des staatstheater darmstadt</div>
                     <div>
                         <div class="image-gallery with-sticky-text">
-                            <div class="image-placeholder">La Traviata Photo 1</div>
-                            <div class="image-placeholder">La Traviata Photo 2</div>
-                            <div class="image-placeholder">La Traviata Photo 3</div>
-                            <div class="image-placeholder">La Traviata Photo 4</div>
-                            <div class="image-placeholder">La Traviata Photo 5</div>
+                               <img class="content-image" src="./websitepics/traviata1.jpg" alt="La Traviata production photo 1">
+                            <img class="content-image" src="./websitepics/traviata2.jpg" alt="La Traviata production photo 2">
+                            <img class="content-image" src="websitepics/traviata3.jpg" alt="La Traviata production photo 4">
+                            <img class="content-image" src="websitepics/traviata4.jpg" alt="La Traviata production photo 5">
+                            <img class="content-image" src="websitepics/traviata5.jpg" alt="La Traviata production photo 6">
                             <div class="mobile-text-card">
                                 <div class="mobile-text-content">la traviata
 opera in three acts by giuseppe verdi
@@ -617,11 +616,11 @@ vj: zoey vero
 w/ far too many drag performers to all name, patrick mason, dancers of ndt, etc.</div>
                     <div>
                         <div class="image-gallery with-sticky-text">
-                            <div class="image-placeholder">Installation Photo 1</div>
-                            <div class="image-placeholder">Installation Photo 2</div>
-                            <div class="image-placeholder">Installation Photo 3</div>
-                            <div class="image-placeholder">Installation Photo 4</div>
-                            <div class="image-placeholder">Installation Photo 5</div>
+                            <img class="content-image" src="./websitepics/IMG_9403.jpg" alt="You Are Not installation photo 1">
+                            <img class="content-image" src="./websitepics/kyle_performance_2.webp"  alt="You Are Not installation photo 2">
+                            <img class="content-image" src="./websitepics/IMG_9419.jpg" alt="You Are Not installation photo 3">
+                            <img class="content-image" src="./websitepics/cassandre_performance_2.webp" alt="You Are Not installation photo 4">
+                            <img class="content-image" src="./websitepics/NDT_performance_2.webp" alt="You Are Not installation photo 5">
                             <div class="mobile-text-card">
                                 <div class="mobile-text-content right-align">you are not what you say i am
 immersive interdisciplinary installation
@@ -650,11 +649,11 @@ vj: zoey vero
 w/ all drag performers in attendance and guests of the festival</div>
                     <div>
                         <div class="image-gallery with-sticky-text">
-                            <div class="image-placeholder">Slagroom Photo 1</div>
-                            <div class="image-placeholder">Slagroom Photo 2</div>
-                            <div class="image-placeholder">Slagroom Photo 3</div>
-                            <div class="image-placeholder">Slagroom Photo 4</div>
-                            <div class="image-placeholder">Slagroom Photo 5</div>
+                            <img class="content-image" src="./websitepics/milkshake-12.webp" alt="Slagroom installation photo 1">
+                            <img class="content-image" src="./websitepics/milkshake-14.webp" alt="Slagroom installation photo 2">
+                            <img class="content-image" src="websitepics/milkshake-16.webp" alt="Slagroom installation photo 3">
+                            <img class="content-image" src="./websitepics/milkshake-18.webp" alt="Slagroom installation photo 4">
+                            <img class="content-image" src="./websitepics/milkshake-5.webp" alt="Slagroom installation photo 6">
                             <div class="mobile-text-card">
                                 <div class="mobile-text-content">slagroom
 interactive installation
@@ -694,15 +693,15 @@ w/ all drag performers in attendance and guests of the festival</div>
                     </div>
                     <div>
                         <div class="image-gallery with-sticky-text">
-                            <div class="image-placeholder">Humanoid Photo 1</div>
-                            <div class="image-placeholder">Humanoid Photo 2</div>
-                            <div class="image-placeholder">Humanoid Photo 3</div>
-                            <div class="image-placeholder">Humanoid Photo 4</div>
-                            <div class="image-placeholder">Humanoid Photo 5</div>
-                            <div class="image-placeholder">Humanoid Photo 6</div>
-                            <div class="image-placeholder">Humanoid Photo 7</div>
-                            <div class="image-placeholder">Humanoid Photo 8</div>
-                            <div class="image-placeholder">YouTube Video Trailer</div>
+                            <img class="content-image" src="./websitepics/humanoid_ohp_02256_FotoSebastianHoppe.jpg" alt="Humanoid production photo 1">
+                            <img class="content-image" src="./websitepics/humanoid_khp_00934_FotoSebastianHoppe.jpg" alt="Humanoid production photo 2">
+                            <img class="content-image" src="./websitepics/humanoid_ohp_03426_FotoSebastianHoppe.jpg" alt="Humanoid production photo 3">
+                            <img class="content-image" src="./websitepics/humanoid_ohp_05036_FotoSebastianHoppe.jpg" alt="Humanoid production photo 4">
+                            <img class="content-image" src="./websitepics/humanoid_ohp_05263_FotoSebastianHoppe.jpg" alt="Humanoid production photo 5">
+                            <img class="content-image" src="./websitepics/humanoid_khp_00478_FotoSebastianHoppe.jpg" alt="Humanoid production photo 6">
+                            <img class="content-image" src="./websitepics/humanoid_ohp_04242_FotoSebastianHoppe.jpg" alt="Humanoid production photo 7">
+                            <img class="content-image" src="./websitepics/humanoid_ohp_04631_FotoSebastianHoppe.jpg" alt="Humanoid production photo 8">
+                            <iframe class="content-image" src="https://www.youtube.com/embed/HPpQgKOiwak?si=bCGk0XFLG5mZTA5k" title="Humanoid trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             <div class="mobile-text-card">
                                 <div class="mobile-text-content">humanoid
 sci-fi oper by leonard evers with a libretto by pamela dürr (2018)
