--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ His own artistic projects include a series of immersive installations at Milksha
 Lars is a fellow of Akademie Musiktheater heute in the 2024–2026 selection.
     </div>
     <div class="image-gallery">
-        <img class="content-image portrait" src="./websitepics/R1-02008-0007.jpg" alt="Portrait of Lars Marcel Braun">
+        <img class="content-image portrait" src="./websitepics/R1-02008-0007.JPG" alt="Portrait of Lars Marcel Braun">
     </div>
     <div class="credits">*photo copyright alex de brabant*</div>
 </div>
