--- a/index.html
+++ b/index.html
@@ -457,11 +457,11 @@
 
         <main class="content-area">
             <div class="content-section" id="lars-marcel-braun" data-section-title="lars marcel braun">
-    <div class="content-text">Lars Marcel Braun (*1994 in Aachen; raised in Seoul, Oakland and Lexington) is a stage director working across opera, theatre, and visual arts. To finance his studies in physics, musicology, and Slavic literature in Zurich, he found work as an extra at the opera — an experience that exposed him to theatre and sparked his path into directing. After several internships and assistantships, he was appointed staff director at the Komische Oper Berlin from 2014 to 2017, personally invited by Barrie Kosky. Since then, he has worked as a freelance assistant and associate at major theatres across Europe. His practice has been shaped by collaborations with mentors including David Alden, Andreas Homoki, Eva-Maria Höckmayr, Jan-Philipp Gloger, Kirill Serebrennikov, Ted Huffmann, and Nanine Linning.
+    <div class="content-text">Lars Marcel Braun (*1994 in Aachen; raised in Seoul, Oakland and Lexington) is a stage director working across opera, theatre, and visual arts. To finance his studies in physics, musicology, and Slavic literature in Zurich, he found work as an extra at the opera, which exposed him to theatre for the first time and sparked his path into directing. After some internships and assistantships, he was appointed staff director at the Komische Oper Berlin from 2014 to 2017, personally invited by Barrie Kosky. Since then, he has worked as a freelance assistant and associate at major theatres across Europe. His practice has been shaped by collaborations with mentors including David Alden, Andreas Homoki, Eva-Maria Höckmayr, Jan-Philipp Gloger, Kirill Serebrennikov, Ted Huffmann, and Nanine Linning.
 
-His own artistic projects include a series of immersive installations at Milkshake Festival in Amsterdam, blending nightlife aesthetics with theatrical interventions with drag performers. Recent works include acclaimed debuts at Semperoper Dresden and Oper Graz. The upcoming season is highlighted by a world premiere in Graz during steirischer herbst and his first opera buffa at Oldenburgisches Staatstheater.
+Beyond opera, his own artistic projects include a series of immersive installations at Milkshake Festival in Amsterdam, blending nightlife aesthetics with theatrical interventions with drag performers. Recent works include acclaimed debuts at Semperoper Dresden and Oper Graz. The upcoming season is highlighted by a world premiere in Graz during steirischer herbst and his first opera buffa at Oldenburgisches Staatstheater.
 
-Lars is a fellow of Akademie Musiktheater heute in the 2024–2026 selection.
+Lars was selected as a fellow of Akademie Musiktheater heute in the 2024–2026 selection.
     </div>
     <div class="image-gallery">
         <img class="content-image portrait" src="./websitepics/R1-02008-0007.JPG" alt="Portrait of Lars Marcel Braun">
@@ -479,7 +479,7 @@ director: lars marcel braun
 set & costumes: victor labarthe d'arnoux
 lights: daniel weiss
 dramaturgy: dorothee harpain
-w/ ana caseiro, ellen rose kelly, felix heuser, johannes wieners, harald hieronymus hein
+w/ ana caseiro, ellen rose kelly, felix heuser, johannes wieners, valentino blasina, harald hieronymus hein
 
 (video upon request)</div>
                     <div>
