Update index.html nachhall

--- a/index.html
+++ b/index.html
@@ -440,13 +440,13 @@
         <nav class="sidebar">
             <ul class="nav-list">
                 <li class="nav-item" data-target="lars-marcel-braun">lars marcel braun ✧.*</li>
-                <li class="nav-item" data-target="geschichte">geschichte</li>
+                <li class="nav-item" data-target="nachhall">nachhall</li>
                 <li class="nav-item" data-target="humanoid">humanoid</li>
+                <li class="nav-item" data-target="geschichte">geschichte</li>
                 <li class="nav-item" data-target="la-traviata">la traviata</li>
                 <li class="nav-item" data-target="you-are-not">you are not what you say i am</li>
                 <li class="nav-item" data-target="slagroom">slagroom</li>
                 <li> </li>
-                <li class="nav-item" data-target="nachhall">nachhall</li>
                 <li class="nav-item" data-target="tba">tba</li>
                 <li class="nav-item" data-target="il-barbiere">il barbiere di siviglia</li>
                 <li class="nav-item" data-target="tancredi">tancredi</li>
@@ -571,8 +571,37 @@ w/ all drag performers in attendance and guests of the festival</div>
                 </div>
             </div>
 
-            <div class="content-section" id="nachhall" data-section-title="nachhall">
-                <div class="content-text right-align">world premiere 5.10.25 @ musikprotokoll graz/steirischer herbst</div>
+              <div class="content-section" id="nachhall" data-section-title="nachhall">
+                <div class="content-with-images">
+                    <div class="content-text sticky">
+                        nachhall (ua)
+                        opera by ui-kyung lee with a libretto by jasmina schädler (2025)
+                        ORF musikprotokoll x steirischer herbst 2025
+                        world premiere 5.10.25
+                        conductor: claire levacher / ana milijasević
+                        director/lights/video: lars marcel braun
+                        set/costumes: elisa weiss
+                        
+
+                        w/ fangyong liang, martin simonovski, beatriz gaudencio ramos, gabriela šipek, mikayla jensen-large, katie richardson mccrae, seungboom lee
+                    </div>
+                    <div>
+                        <div class="image-gallery with-sticky-text">
+                            <img class="content-image" src="./websitepics/humanoid_ohp_02256_FotoSebastianHoppe.jpg" alt="Humanoid production photo 1">
+                            <img class="content-image" src="./websitepics/humanoid_khp_00934_FotoSebastianHoppe.jpg" alt="Humanoid production photo 2">
+                            <img class="content-image" src="./websitepics/humanoid_ohp_03426_FotoSebastianHoppe.jpg" alt="Humanoid production photo 3">
+                            <img class="content-image" src="./websitepics/Screenshot 2025-09-08 at 08.43.20.png" alt="Humanoid production photo review 1">
+                            <img class="content-image" src="./websitepics/humanoid_ohp_05036_FotoSebastianHoppe.jpg" alt="Humanoid production photo 4">
+                            <img class="content-image" src="./websitepics/humanoid_ohp_05263_FotoSebastianHoppe.jpg" alt="Humanoid production photo 5">
+                            <img class="content-image" src="./websitepics/Screenshot 2025-09-08 at 08.43.25.png" alt="Humanoid production photo review 2">
+                            <img class="content-image" src="./websitepics/humanoid_khp_00478_FotoSebastianHoppe.jpg" alt="Humanoid production photo 6">
+                            <img class="content-image" src="./websitepics/humanoid_ohp_04242_FotoSebastianHoppe.jpg" alt="Humanoid production photo 7">
+                            <img class="content-image" src="./websitepics/humanoid_ohp_04631_FotoSebastianHoppe.jpg" alt="Humanoid production photo 8">
+                            <iframe class="content-image" src="https://www.youtube.com/embed/HPpQgKOiwak?si=bCGk0XFLG5mZTA5k" title="Humanoid trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        </div>
+                        <div class="credits with-sticky-text">*photos copyright lars marcel braun*</div>
+                    </div>
+                </div>
             </div>
 
             <div class="content-section" id="humanoid" data-section-title="humanoid">
