Update index.html nachhall 2

--- a/index.html
+++ b/index.html
@@ -576,6 +576,7 @@ w/ all drag performers in attendance and guests of the festival</div>
                     <div class="content-text sticky">
                         nachhall (ua)
                         opera by ui-kyung lee with a libretto by jasmina schädler (2025)
+                        inspired by the essay cleaning the dead’s house 죽은 자의 집 청소 by kim wan
                         ORF musikprotokoll x steirischer herbst 2025
                         world premiere 5.10.25
                         conductor: claire levacher / ana milijasević
@@ -584,20 +585,20 @@ w/ all drag performers in attendance and guests of the festival</div>
                         
 
                         w/ fangyong liang, martin simonovski, beatriz gaudencio ramos, gabriela šipek, mikayla jensen-large, katie richardson mccrae, seungboom lee
+                        the project is supported by the korea cultural center’s K_on_temporary initiative
                     </div>
                     <div>
                         <div class="image-gallery with-sticky-text">
-                            <img class="content-image" src="./websitepics/humanoid_ohp_02256_FotoSebastianHoppe.jpg" alt="Humanoid production photo 1">
-                            <img class="content-image" src="./websitepics/humanoid_khp_00934_FotoSebastianHoppe.jpg" alt="Humanoid production photo 2">
-                            <img class="content-image" src="./websitepics/humanoid_ohp_03426_FotoSebastianHoppe.jpg" alt="Humanoid production photo 3">
-                            <img class="content-image" src="./websitepics/Screenshot 2025-09-08 at 08.43.20.png" alt="Humanoid production photo review 1">
-                            <img class="content-image" src="./websitepics/humanoid_ohp_05036_FotoSebastianHoppe.jpg" alt="Humanoid production photo 4">
-                            <img class="content-image" src="./websitepics/humanoid_ohp_05263_FotoSebastianHoppe.jpg" alt="Humanoid production photo 5">
-                            <img class="content-image" src="./websitepics/Screenshot 2025-09-08 at 08.43.25.png" alt="Humanoid production photo review 2">
-                            <img class="content-image" src="./websitepics/humanoid_khp_00478_FotoSebastianHoppe.jpg" alt="Humanoid production photo 6">
-                            <img class="content-image" src="./websitepics/humanoid_ohp_04242_FotoSebastianHoppe.jpg" alt="Humanoid production photo 7">
-                            <img class="content-image" src="./websitepics/humanoid_ohp_04631_FotoSebastianHoppe.jpg" alt="Humanoid production photo 8">
-                            <iframe class="content-image" src="https://www.youtube.com/embed/HPpQgKOiwak?si=bCGk0XFLG5mZTA5k" title="Humanoid trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <img class="content-image" src="./websitepics/MS100215.jpg" alt="nachhall production photo 1">
+                            <img class="content-image" src="./websitepics/hMS100220.jpg" alt="nachhall production photo 2">
+                            <img class="content-image" src="./websitepics/MS100251.jpg" alt="nachhall production photo 3">
+                            <img class="content-image" src="./websitepics/MS100266.jpg" alt="nachhall production photo 4">
+                            <img class="content-image" src="./websitepics/MS100288.jpg" alt="nachhall production photo 5">
+                            <img class="content-image" src="./websitepics/MS100303.jpg" alt="nachhall production photo 6">
+                            <img class="content-image" src="./websitepics/MS100318.jpg" alt="nachhall production photo 7">
+                            <img class="content-image" src="./websitepics/MS100330.jpg" alt="nachhall production photo 8">
+                            <img class="content-image" src="./websitepics/MS100358.jpg" alt="nachhall production photo 9">
+                            <iframe class="content-image" src="https://vimeo.com/1119743627?fl=pl&fe=sh" title="nachhall video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         </div>
                         <div class="credits with-sticky-text">*photos copyright lars marcel braun*</div>
                     </div>
