--- a/index.html
+++ b/index.html
@@ -584,13 +584,13 @@ w/ all drag performers in attendance and guests of the festival</div>
                         set/costumes: elisa weiss
                         
 
-                        w/ fangyong liang, martin simonovski, beatriz gaudencio ramos, gabriela šipek, mikayla jensen-large, katie richardson mccrae, seungboom lee
+                        w/ fangyong liang, martin simonovski, beatriz gaudêncio ramos, gabriela šipek, mikayla jensen-large, katie richardson mccrae, seungboom lee
                         the project is supported by the korea cultural center’s K_on_temporary initiative
                     </div>
                     <div>
                         <div class="image-gallery with-sticky-text">
                             <img class="content-image" src="./websitepics/MS100215.jpg" alt="nachhall production photo 1">
-                            <img class="content-image" src="./websitepics/hMS100220.jpg" alt="nachhall production photo 2">
+                            <img class="content-image" src="./websitepics/MS100220.jpg" alt="nachhall production photo 2">
                             <img class="content-image" src="./websitepics/MS100251.jpg" alt="nachhall production photo 3">
                             <img class="content-image" src="./websitepics/MS100266.jpg" alt="nachhall production photo 4">
                             <img class="content-image" src="./websitepics/MS100288.jpg" alt="nachhall production photo 5">
