--- a/index.html
+++ b/index.html
@@ -592,9 +592,11 @@ w/ all drag performers in attendance and guests of the festival</div>
                             <img class="content-image" src="./websitepics/MS100215.jpg" alt="nachhall production photo 1">
                             <img class="content-image" src="./websitepics/MS100220.jpg" alt="nachhall production photo 2">
                             <img class="content-image" src="./websitepics/MS100251.jpg" alt="nachhall production photo 3">
+                            <img class="content-image" src="./websitepics/MS100251.jpg" alt="nachhall review photo 1">
                             <img class="content-image" src="./websitepics/MS100266.jpg" alt="nachhall production photo 4">
                             <img class="content-image" src="./websitepics/MS100288.jpg" alt="nachhall production photo 5">
                             <img class="content-image" src="./websitepics/MS100303.jpg" alt="nachhall production photo 6">
+                            <img class="content-image" src="./websitepics/MS100251.jpg" alt="nachhall review photo 2">
                             <img class="content-image" src="./websitepics/MS100318.jpg" alt="nachhall production photo 7">
                             <img class="content-image" src="./websitepics/MS100330.jpg" alt="nachhall production photo 8">
                             <img class="content-image" src="./websitepics/MS100358.jpg" alt="nachhall production photo 9">
