--- a/index.html
+++ b/index.html
@@ -648,8 +648,41 @@ w/ all drag performers in attendance and guests of the festival</div>
                 <div class="content-text right-align">premiere 18.4.26 @ oldenburgisches staatstheater</div>
             </div>
 
-            <div class="content-section" id="tba" data-section-title="tba">
-                <div class="content-text right-align">TBA (premiere 5.12.25)</div>
+            <div class="content-section" id="das schlaue füchslein" data-section-title="das schlaue füchslein">
+                <div class="content-with-images">
+                    <div class="content-text sticky right-align">das schlaue füchslein
+příhody lišky bystroušky
+or the cunning little vixen
+by leoš janáček
+opera in 3 acts
+landestheater detmold
+premiere 5.12.25
+director: lars marcel braun
+conductor: claudio novati
+(based on a concept by geertje boeden)
+set & costumes: beata kornatowska
+lights: udo groll
+dramaturgy: emilia ebert
+chorleitung: francesco damiani
+w/ johanna nylund, jonah spungin, emily dorn, ricardo llamas garcias, jaima mondaca galaz, nikos striezel, katarzyna włodarczyk, marianna nomikou, boyoung lee, milica milic, oggi milivojsa, tatiana yang, meta hildebrandt, christin stanowsky, franziska pfalzgraf, ks brigitte bauma
+Opernchor Landestheater Detmold
+Detmolder Schloss Spatzen
+(video upon request)</div>
+                    <div>
+                        <div class="image-gallery with-sticky-text">
+                            <img class="content-image" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_005.jpg" alt="Geschichte production photo 1">
+                            <img class="content-image" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_029.jpg" alt="Geschichte production photo 2">
+                            <img class="content-image" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_034.jpg" alt="Geschichte production photo 3">
+                            <img class="content-image" src="./websitepics/Screenshot 2025-09-08 at 08.54.13.png" alt="Geschichte production photo review 1">
+                            <img class="content-image" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_023.jpg" alt="Geschichte production photo 4">
+                            <img class="content-image" src="./websitepics/Screenshot 2025-09-08 at 08.54.17.png" alt="Geschichte production photo review 2">
+                            <img class="content-image" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_025.jpg" alt="Geschichte production photo 5">
+                            <img class="content-image" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_012.jpg" alt="Geschichte production photo 6">
+                            <img class="content-image" src="./websitepics/PhotoWerK_OG_Geschichte_HP2_LRes_027.jpg" alt="Geschichte production photo 7">
+                        </div>
+                        <div class="credits with-sticky-text">*photos copyright werner kmetitsch*</div>
+                    </div>
+                </div>
             </div>
 
             <div class="content-section" id="tancredi" data-section-title="tancredi">
