--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                 <li class="nav-item" data-target="you-are-not">you are not what you say i am</li>
                 <li class="nav-item" data-target="slagroom">slagroom</li>
                 <li> </li>
-                <li class="nav-item" data-target="tba">tba</li>
+                <li class="nav-item" data-target="das-schlaue-füchslein">das schlaue füchslein</li>
                 <li class="nav-item" data-target="il-barbiere">il barbiere di siviglia</li>
                 <li class="nav-item" data-target="tancredi">tancredi</li>
                 <li class="nav-item" data-target="email">email</li>
