--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@ w/ all drag performers in attendance and guests of the festival</div>
                 <div class="content-text right-align">premiere 18.4.26 @ oldenburgisches staatstheater</div>
             </div>
 
-            <div class="content-section" id="das schlaue füchslein" data-section-title="das schlaue füchslein">
+            <div class="content-section" id="das-schlaue-füchslein" data-section-title="das schlaue füchslein">
                 <div class="content-with-images">
                     <div class="content-text sticky right-align">das schlaue füchslein
 příhody lišky bystroušky
